# udjat-module-usersession

./: .gitignore  .lgtm.yml  CHANGELOG  Makefile.in  PKGBUILD.mingw  README.md  configure.ac  link.sh  meson.build  test.xml  users.cbp  valgrind.suppression
.github/workflows/: codeql.yml  msys2.yml  publish.yml  wincheck.yml
po/: POTFILES.in  pt_BR.po
rpm/: _service  _servicedata  libudjatusers.spec  mingw64-libudjatusers.spec  udjat-module-users.spec
sdk/linux/: dynamic.pc.in  static.pc.in
sdk/windows/: dynamic.pc.in  static.pc.in
src/: controller.cc  session.cc
src/include/: config.h.in
src/include/private/: controller.h  linux.h
src/include/udjat/agent/: user.h
src/include/udjat/alert/: user.h
src/include/udjat/tools/: usersession.h
src/include/udjat/tools/user/: list.h  session.h
src/module/: agent.cc  alert.cc  alertproxy.cc  controller.cc  init.cc  private.h  session.cc  userlistagent.cc
src/os/linux/: controller.cc  session.cc  usermonitor.cbp
src/os/windows/: controller.cc  session.cc  usermonitor.cbp
src/testprogram/: testprogram.cc
src/testprogram/windows/: app-manifest.xml.in  resources.rc.in
win/: ci-build.sh  mingw64-udjat-users.spec
win/x86_64/: CHANGELOG  mingw64-udjat-civetweb.spec  mingw64-udjat-users.spec
